# SWEN-Spring2021

./: .gitignore  README.md
aff/: 06xBNzumNq.csv  06xBNzumNq_y_mode.csv
netexpo/: 05Vi3jPKmL.csv  05Vi3jPKmL_y.csv
src/: CMakeLists.txt  Main.java  ModeInfo.java  SWIGTYPE_p_p_double.java  affiliationexposure.c  affiliationexposure.h  affiliationexposure.i  affiliationexposure.java  affiliationexposureJNI.java  affiliationexposure_wrap.c  networkexposure.c  networkexposure.h  networkexposure.i  networkexposure.java  networkexposureJNI.java  networkexposure_wrap.c
